# maime

./: Cargo.toml  README.md
assets/res/model/: eye.glb  eye.gltf  readme.txt
assets/res/shaders/: eye.wgsl
src/: lib.rs  main.rs  view.rs
src/controller/: mod.rs
src/entity/: eye.rs  macro.rs  mod.rs
